Add javadoc and unit testing