@@ -10,15 +10,14 @@ plugins {
     // Use 4.0.4 for tomcat10
     //id "org.gretty" version "4.0.3"
     id "org.gretty" version "3.1.1"
+
+    // For jmh benchmarks
+    id "me.champeau.jmh" version "0.6.8"
 }
 
-apply plugin: 'application'
+apply plugin: 'java-library'
 apply plugin: 'java'
 apply plugin: 'war'
-
-application {
-    getMainClass().set('Main')
-}
 
 repositories {
     // Use Maven Central for resolving dependencies.
@@ -28,6 +27,17 @@ repositories {
 dependencies {
     // Use JUnit test framework.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+
+    // Better assertions
+    testImplementation 'org.assertj:assertj-core:3.23.1'
+
+    // For mocking
+    implementation 'org.mockito:mockito-core:4.11.0'
+
+    // Use the JMH benchmarking framework.
+    testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.36'
+    implementation 'org.openjdk.jmh:jmh-core:1.36'
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
@@ -46,8 +56,6 @@ dependencies {
 
     implementation 'org.slf4j:slf4j-api:2.0.6'
     implementation 'org.slf4j:slf4j-simple:2.0.6'
-
-    implementation 'org.glassfish.main.javaee-api:javax.jws:3.1.2.2'
 
     implementation 'com.fasterxml.jackson.core:jackson-core:2.14.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
@@ -71,6 +79,18 @@ gretty {
     //loggingLevel = 'ALL'
 }
 
+test {
+    useJUnitPlatform()
+}
+
+jmh {
+    jvmArgs = [ '--enable-preview' ]
+}
+
+jmhRunBytecodeGenerator {
+    getJvmArgs().add("--enable-preview")
+}
+
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs += "--enable-preview"
     options.compilerArgs += "-Xlint:unchecked"
@@ -83,4 +103,14 @@ tasks.withType(Test).configureEach {
 
 tasks.withType(JavaExec).configureEach {
     jvmArgs += '--enable-preview'
+}
+
+tasks.withType(Javadoc).configureEach {
+    options.addBooleanOption('-enable-preview', true)
+    options.addStringOption('-release', '19')
+    options.tags = [
+            'apiNote:a:API Note:',
+            'implSpec:a:Implementation Requirements:',
+            'implNote:a:Implementation Note:',
+    ]
 }
